# KisakCOD

./: .gitignore  CMakeLists.txt  KisakCOD.sln  README.md  build-win.bat  build.gradle.kts  cmake_files.cmake  cmake_files_MP.cmake  cmake_files_SP.cmake  cmake_files_dedicated.cmake  generate-project.bat  settings.gradle.kts
KisakCOD/: CMakeLists.txt  KisakCOD.vcxproj  KisakCOD.vcxproj.filters  __KisakCOD  cmake_files.cmake  cmake_files_dedicated.cmake  mksln.bat  mksln_dedi.bat
KisakCOD/Debug/: vc143.idb
KisakCOD/Debug/KisakCOD.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  KisakCOD.lastbuildstate
KisakCOD/scripts/: increment_build.bat  increment_build.cmd  increment_build.sh
KisakCOD/src/: buildnumber.h  buildnumber_mp.cpp  buildnumber_mp.h
KisakCOD/src/DynEntity/: DynEntity_client.cpp  DynEntity_client.h  DynEntity_coll.cpp  DynEntity_load_obj.cpp  DynEntity_pieces.cpp
KisakCOD/src/EffectsCore/: fx_archive.cpp  fx_beam.cpp  fx_convert.cpp  fx_draw.cpp  fx_graph.cpp  fx_load_obj.cpp  fx_marks.cpp  fx_postlight.cpp  fx_profile.cpp  fx_random.cpp  fx_sort.cpp  fx_sprite.cpp  fx_system.cpp  fx_system.h  fx_update.cpp  fx_update_util.cpp
KisakCOD/src/aim_assist/: aim_assist.cpp  aim_assist.h  aim_target_mp.cpp
KisakCOD/src/bgame/: bg_animation_mp.cpp  bg_jump.cpp  bg_local.h  bg_mantle.cpp  bg_misc.cpp  bg_misctables.cpp  bg_perks_mp.cpp  bg_pmove.cpp  bg_public.h  bg_slidemove.cpp  bg_vehicles_mp.cpp  bg_weapons.cpp  bg_weapons.h  bg_weapons_load_obj.cpp
KisakCOD/src/binklib/: bink.h  binktextures.h  rad3d.h  radbase.h
KisakCOD/src/cgame/: cg_ammocounter.cpp  cg_camerashake.cpp  cg_colltree.cpp  cg_compass.cpp  cg_draw_debug.cpp  cg_draw_indicators.cpp  cg_draw_reticles.cpp  cg_drawtools.cpp  cg_effects_load_obj.cpp  cg_event.cpp  cg_hudelem.cpp  cg_info.cpp  cg_laser.cpp  cg_local.h  cg_localents.cpp  cg_playerstate.cpp  cg_pose_utils.cpp  cg_public.h  cg_shellshock.cpp  cg_visionsets.cpp  cg_weapons.cpp  cg_world.cpp  offhandweapons.cpp
KisakCOD/src/cgame_mp/: cg_animtree_mp.cpp  cg_client_side_effects_mp.cpp  cg_compassfriendlies_mp.cpp  cg_consolecmds_mp.cpp  cg_draw_mp.cpp  cg_draw_net_mp.cpp  cg_ents_mp.cpp  cg_local_mp.h  cg_main_mp.cpp  cg_newDraw_mp.cpp  cg_players_mp.cpp  cg_pose_mp.cpp  cg_predict_mp.cpp  cg_public_mp.h  cg_scoreboard_mp.cpp  cg_servercmds_mp.cpp  cg_snapshot_mp.cpp  cg_vehicles_mp.cpp  cg_view_mp.cpp
KisakCOD/src/client/: cl_cin.cpp  cl_console.cpp  cl_debugdata.cpp  cl_devgui.cpp  cl_keys.cpp  client.h  con_channels.cpp  screen_placement.cpp
KisakCOD/src/client_mp/: cl_cgame_mp.cpp  cl_input.cpp  cl_main_mp.cpp  cl_main_pc_mp.cpp  cl_net_chan_mp.cpp  cl_parse_mp.cpp  cl_pose_mp.cpp  cl_rank.cpp  cl_scrn_mp.cpp  cl_ui_mp.cpp  cl_voice.cpp  client_mp.h
KisakCOD/src/common/: brush.h  brush_edges.cpp
KisakCOD/src/database/: database.h  db_assetnames.cpp  db_auth.cpp  db_file_load.cpp  db_load.cpp  db_memory.cpp  db_registry.cpp  db_stream.cpp  db_stream_load.cpp  db_stringtable_load.cpp
KisakCOD/src/devgui/: devgui.cpp  devgui.h  devgui_input.cpp  devgui_util.cpp
KisakCOD/src/game/: bullet.cpp  bullet.h  enthandle.cpp  enthandle.h  g_client_fields.cpp  g_debug.cpp  g_helicopter.cpp  g_hudelem.cpp  g_items.cpp  g_load_utils.cpp  g_missile.cpp  g_mover.cpp  g_scr_mover.cpp  g_scr_vehicle.cpp  g_svcmds.cpp  g_weapon.cpp  g_weapon_load_obj.cpp  game_public.h
KisakCOD/src/game_mp/: g_active_mp.cpp  g_client_mp.cpp  g_client_script_cmd_mp.cpp  g_cmds_mp.cpp  g_combat_mp.cpp  g_main_mp.cpp  g_main_mp.h  g_misc_mp.cpp  g_player_corpse_mp.cpp  g_public_mp.h  g_scr_helicopter.cpp  g_scr_main_mp.cpp  g_spawn_mp.cpp  g_trigger_mp.cpp  g_utils_mp.cpp  g_utils_mp.h  g_vehicles_mp.cpp  player_use_mp.cpp
KisakCOD/src/gfx_d3d/: fxprimitives.h  r_add_bsp.cpp  r_add_staticmodel.cpp  r_add_staticmodel.h  r_bsp.cpp  r_bsp.h  r_bsp_load_obj.cpp  r_buffers.cpp  r_buffers.h  r_cinematic.cpp  r_cinematic.h  r_cmdbuf.cpp  r_cmdbuf.h  r_cmds.cpp  r_debug.cpp  r_debug.h  r_debug_alloc.cpp  r_devgui.cpp  r_dobj_skin.cpp  r_dobj_skin.h  r_dpvs.cpp  r_dpvs.h  r_dpvs_dynmodel.cpp  r_dpvs_entity.cpp  r_dpvs_sceneent.cpp  r_dpvs_static.cpp  r_draw_bsp.cpp  r_draw_bsp.h  r_draw_lit.cpp  r_draw_material.cpp  r_draw_method.cpp  r_draw_method.h  r_draw_pixelshader.cpp  r_draw_shadowable_light.cpp  r_draw_shadowable_light.h  r_draw_staticmodel.cpp  r_draw_staticmodel.h  r_draw_sunshadow.cpp  r_draw_sunshadow.h  r_draw_xmodel.cpp  (+125 more)
KisakCOD/src/groupvoice/: decode.cpp  directsound.h  dsound.h  encode.cpp  play_dsound.cpp  record_dsound.cpp
KisakCOD/src/msslib/: mss.h
KisakCOD/src/ode/: collision.h  common.h  config.h  error.h  misc.h  objects.h  ode.h  odecpp.h  odecpp_collision.h  odemath.h
KisakCOD/src/physics/: phys_coll_boxbrush.cpp  phys_coll_capsulebrush.cpp  phys_coll_cylinderbrush.cpp  phys_coll_local.h  phys_contacts.cpp  phys_local.h  phys_ode.cpp  phys_world_collision.cpp  physpreset_load_obj.cpp
KisakCOD/src/qcommon/: bitarray.h  cm_load.cpp  cm_load_obj.cpp  cm_mesh.cpp  cm_showcollision.cpp  cm_staticmodel.cpp  cm_test.cpp  cm_trace.cpp  cm_tracebox.cpp  cm_world.cpp  cmd.cpp  cmd.h  com_bsp.h  com_bsp_load_obj.cpp  com_fileaccess.cpp  com_fileaccess.h  com_memory.cpp  com_memory.h  com_pack.cpp  com_pack.h  com_playerprofile.cpp  com_playerprofile.h  com_profilemapload.cpp  common.cpp  dl_main.cpp  dl_main.h  dobj_management.cpp  ent.h  files.cpp  files.h  graph.cpp  graph.h  huffman.cpp  huffman.h  md4.cpp  mem_track.cpp  mem_track.h  msg_mp.cpp  msg_mp.h  net_chan_mp.cpp  (+9 more)
KisakCOD/src/ragdoll/: ragdoll.cpp  ragdoll.h  ragdoll_controller.cpp  ragdoll_update.cpp
KisakCOD/src/script/: scr_animtree.cpp  scr_animtree.h  scr_compiler.cpp  scr_compiler.h  scr_compiler2.cpp  scr_debugger.cpp  scr_debugger.h  scr_evaluate.cpp  scr_evaluate.h  scr_main.cpp  scr_main.h  scr_memorytree.cpp  scr_memorytree.h  scr_parser.cpp  scr_parser.h  scr_parsetree.cpp  scr_parsetree.h  scr_stringlist.cpp  scr_stringlist.h  scr_variable.cpp  scr_variable.h  scr_vm.cpp  scr_vm.h  scr_yacc.cpp  scr_yacc.h  scr_yacc2.cpp
KisakCOD/src/sound/: snd.cpp  (+5 more)
(+937 files in other folders)
